# daisy

./: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  flake.nix  meson.build
.cache/clangd/index/: main.cpp.387CC48B5A39285D.idx
docs/: NOTES.md  specification.md
docs/specification/: GRAMMAR.md  GRAMMAR_TEMPLATE.md  OVERVIEW.md
fixtures/: main.daisy
include/: debug.hpp  scanner.hpp  test.hpp  token.hpp  token_type.hpp
scripts/: format.sh  tidy.sh
src/: main.cpp  scanner.cpp  test.cpp
tests/: tests.cpp
